--- a/.golangci.yml
+++ b/.golangci.yml
@@ -53,7 +53,6 @@ run:
   allow-parallel-runners: false
 linters:
   disable:
-    - errcheck
     - unused
     - deadcode
     - structcheck
@@ -62,3 +61,32 @@ linters:
     - staticcheck
     - ineffassign
     - govet
+linters-settings:    
+  errcheck:
+      # Report about not checking of errors in type assertions: `a := b.(MyStruct)`.
+      # Such cases aren't reported by default.
+      # Default: false
+      # check-type-assertions: true
+
+      # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`.
+      # Such cases aren't reported by default.
+      # Default: false
+      # check-blank: true
+
+      # DEPRECATED comma-separated list of pairs of the form pkg:regex
+      #
+      # the regex is used to ignore names within pkg. (default "fmt:.*").
+      # see https://github.com/kisielk/errcheck#the-deprecated-method for details
+      # ignore: Unlock|try2|UnregisterService
+
+      # DEPRECATED use exclude-functions instead.
+      #
+      # Path to a file containing a list of functions to exclude from checking.
+      # See https://github.com/kisielk/errcheck#excluding-functions for details.
+      # exclude: /path/to/file.txt
+
+      # List of functions to exclude from checking, where each entry is a single function to exclude.
+      # See https://github.com/kisielk/errcheck#excluding-functions for details.
+      exclude-functions:
+     
+   
